tasks header added

--- a/index.html
+++ b/index.html
@@ -50,11 +50,18 @@
                                     <h2 class="font-bold text-[#00303C] text-3xl">05</h2>
                                 </div>
                             </div>
-                            <div class="col-span-2">
+                            <div class="col-span-2 bg-linear-to-r from-[#3752FD] via-[#6C7FFA] to-[#9BA8F8] flex justify-items-start items-center rounded-xl p-4">
+                                <img class="pl-4" src="assets/board.png" alt="">
+                                <h2 class="text-[#FFF] text-[22px] ml-4 font-semibold">Discover Something <br> New Today!</h2>
 
                             </div>
-                            <div>
-
+                            <div class="flex bg-[#F4F7FF] justify-center items-center p-4 rounded-xl">
+                                <div class="w-[64px] h-[64px] bg-[#FFFFFF] rounded-full flex justify-center items-center">
+                                   <img class="w-[28px] h-[28px]" src="assets/calender.png" alt="">
+                                </div>
+                                <div class="pl-2">
+                                    <h2 id="date" class="font-bold text-[#00303C] text-[22px] pl-2"></h2>
+                                </div>
                             </div>
 
                         </div>
@@ -87,7 +94,7 @@
 
     </section>
     
-
+<script src="script/devBoard.js"></script>
 </body>
 
 </html>
