--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <section class="w-11/12 mx-auto">
         <header>
-            <nav class="bg-[#FFFFFF] p-4 rounded-xl flex justify-between">
+            <nav class="bg-[#FFFFFF] p-4 rounded-xl flex justify-between shadow-md">
                 <div class="flex items-center ">
                     <img src="assets/logo.png" alt="">
                     <h1 class="text-3xl text-[#00303C] pl-1">Dev<span class="font-bold">Board</span></h1>
@@ -53,9 +53,9 @@
 
         <main>
 
-            <div class="flex mt-4">
+            <div class="flex mt-4 pb-10">
 
-                <section class="w-9/12 bg-[#FFFFFF] rounded-xl" id="task-container">
+                <section class="w-9/12 bg-[#FFFFFF] rounded-xl pb-6 shadow-md" id="task-container">
                     <div id="tasks-header" class="grid grid-cols-4 gap-4 p-4">
                         <div class="flex bg-[#F4F7FF] justify-center items-center p-4 rounded-xl">
                             <div class="w-[64px] h-[64px] bg-[#FFFFFF] rounded-full flex justify-center items-center">
@@ -276,7 +276,7 @@
 
 
 
-                <aside class="w-3/12 bg-[#FFFFFF] ml-4 rounded-xl " id="activity-container">
+                <aside class="w-3/12 bg-[#FFFFFF] ml-4 rounded-xl shadow-md" id="activity-container">
                     <div class="flex-row justify-center text-center space-y-4">
                         <div class="mt-6 flex justify-center items-center">
                             <img class="mr-4" src="assets/activity.png" alt="">
