--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <main>
 
             <div class="flex mt-4 pb-10">
-
+                <!-- task header and boxes container  -->
                 <section class="w-9/12 bg-[#FFFFFF] rounded-xl pb-6 shadow-md" id="task-container">
                     <div id="tasks-header" class="grid grid-cols-4 gap-4 p-4">
                         <div class="flex bg-[#F4F7FF] justify-center items-center p-4 rounded-xl">
@@ -89,7 +89,7 @@
 
                     <div class="grid grid-cols-3 grid-rows-2 gap-8 mx-4" id="task-boxs">
                         <!--Task box 1  -->
-                        <div class="bg-[#F4F7FF] rounded-xl">
+                        <div class="bg-[#F4F7FF] rounded-xl shadow-md ">
                             <div class="p-6">
                                 <div class="bg-[#FFF] rounded-md flex justify-center  w-[120px] h-[40px] text-center items-center ">
                                     <h3 class="text-[16px] text-[#00303C] font-medium">ShopEase</h3>
@@ -120,7 +120,7 @@
                             </div>
                         </div>
                         <!--Task box 2  -->
-                        <div class="bg-[#F4F7FF] rounded-xl">
+                        <div class="bg-[#F4F7FF] rounded-xl shadow-md">
                             <div class="p-6">
                                 <div class="bg-[#FFF] rounded-md flex justify-center  w-[120px] h-[40px] text-center items-center p-4">
                                     <h3 class="text-[16px] text-[#00303C] font-medium">CloudSync</h3>
@@ -150,7 +150,7 @@
                             </div>
                         </div>
                         <!--Task box 3  -->
-                        <div class="bg-[#F4F7FF] rounded-xl">
+                        <div class="bg-[#F4F7FF] rounded-xl shadow-md">
                             <div class="p-6">
                                 <div class="bg-[#FFF] rounded-md flex justify-center  w-[120px] h-[40px] text-center items-center p-4">
                                     <h3 class="text-[16px] text-[#00303C] font-medium">SwiftPay</h3>
@@ -180,7 +180,7 @@
                             </div>
                         </div>
                         <!--Task box 4  -->
-                        <div class="bg-[#F4F7FF] rounded-xl">
+                        <div class="bg-[#F4F7FF] rounded-xl shadow-md">
                             <div class="p-6">
                                 <div class="bg-[#FFF] rounded-md flex justify-center  w-[100px] h-[40px] text-center items-center p-4">
                                     <h3 class="text-[16px] text-[#00303C] font-medium">Meta</h3>
@@ -210,7 +210,7 @@
                             </div>
                         </div>
                         <!--Task box 5  -->
-                        <div class="bg-[#F4F7FF] rounded-xl">
+                        <div class="bg-[#F4F7FF] rounded-xl shadow-md">
                             <div class="p-6">
                                 <div class="bg-[#FFF] rounded-md flex justify-center  w-[130px] h-[40px] text-center items-center p-4">
                                     <h3 class="text-[16px] text-[#00303C] font-medium">Google LLC</h3>
@@ -240,7 +240,7 @@
                             </div>
                         </div>
                         <!--Task box 6  -->
-                        <div class="bg-[#F4F7FF] rounded-xl">
+                        <div class="bg-[#F4F7FF] rounded-xl shadow-md">
                             <div class="p-6">
                                 <div class="bg-[#FFF] rounded-md flex justify-center  w-[120px] h-[40px] text-center items-center p-4">
                                     <h3 class="text-[16px] text-[#00303C] font-medium">Glassdoar</h3>
@@ -275,7 +275,7 @@
                 </section>
 
 
-
+                  <!-- activity container  -->
                 <aside class="w-3/12 bg-[#FFFFFF] ml-4 rounded-xl shadow-md" id="activity-container">
                     <div class="flex-row justify-center text-center space-y-4">
                         <div class="mt-6 flex justify-center items-center">
@@ -299,6 +299,7 @@
                     </div>
 
                 </aside>
+
 
 
 
