date time dynamically added

--- a/index.html
+++ b/index.html
@@ -66,18 +66,18 @@
                                 <h2 class="font-bold text-[#00303C] text-3xl">05</h2>
                             </div>
                         </div>
-                        <div
-                            class="col-span-2 bg-linear-to-r from-[#3752FD] via-[#6C7FFA] to-[#9BA8F8] flex justify-items-start items-center rounded-xl p-4">
+                        <div id="discover-box"
+                            class="cursor-pointer col-span-2 bg-linear-to-r from-[#3752FD] via-[#6C7FFA] to-[#9BA8F8] flex justify-items-start items-center rounded-xl p-4">
                             <img class="pl-4" src="assets/board.png" alt="">
                             <h2 class="text-[#FFF] text-[22px] ml-4 font-semibold">Discover Something <br> New Today!
                             </h2>
 
                         </div>
                         <div class="flex bg-[#F4F7FF] justify-center items-center rounded-xl gap-2 pl-4">
-                            <div class="w-[80px] h-[66px] bg-[#FFFFFF] rounded-full flex justify-center items-center ">
+                            <div class="w-[66px] h-[66px] bg-[#FFFFFF] rounded-full flex justify-center items-center ">
                                 <img class="w-[28px] h-[28px]" src="assets/calender.png" alt="">
                             </div>
-                            <div class="">
+                            <div >
                                 <h2 id="date" class="font-bold text-[#00303C] text-[22px] pl-2"></h2>
                             </div>
 
@@ -87,9 +87,9 @@
 
                     <div class=" border-[#3752fd33] border-b-3 border-dashed mb-14 mt-10"></div>
 
-                    <div class="grid grid-cols-3 grid-rows-2 gap-8 mx-4" id="task-boxs">
+                    <div class="grid grid-cols-3 grid-rows-2 gap-8 mx-6" id="task-boxs">
                         <!--Task box 1  -->
-                        <div class="bg-[#F4F7FF] rounded-xl shadow-md ">
+                        <div class="bg-[#F4F7FF] rounded-xl shadow-lg ">
                             <div class="p-6">
                                 <div class="bg-[#FFF] rounded-md flex justify-center  w-[120px] h-[40px] text-center items-center ">
                                     <h3 class="text-[16px] text-[#00303C] font-medium">ShopEase</h3>
@@ -120,7 +120,7 @@
                             </div>
                         </div>
                         <!--Task box 2  -->
-                        <div class="bg-[#F4F7FF] rounded-xl shadow-md">
+                        <div class="bg-[#F4F7FF] rounded-xl shadow-lg">
                             <div class="p-6">
                                 <div class="bg-[#FFF] rounded-md flex justify-center  w-[120px] h-[40px] text-center items-center p-4">
                                     <h3 class="text-[16px] text-[#00303C] font-medium">CloudSync</h3>
@@ -150,7 +150,7 @@
                             </div>
                         </div>
                         <!--Task box 3  -->
-                        <div class="bg-[#F4F7FF] rounded-xl shadow-md">
+                        <div class="bg-[#F4F7FF] rounded-xl shadow-lg">
                             <div class="p-6">
                                 <div class="bg-[#FFF] rounded-md flex justify-center  w-[120px] h-[40px] text-center items-center p-4">
                                     <h3 class="text-[16px] text-[#00303C] font-medium">SwiftPay</h3>
@@ -180,7 +180,7 @@
                             </div>
                         </div>
                         <!--Task box 4  -->
-                        <div class="bg-[#F4F7FF] rounded-xl shadow-md">
+                        <div class="bg-[#F4F7FF] rounded-xl shadow-lg">
                             <div class="p-6">
                                 <div class="bg-[#FFF] rounded-md flex justify-center  w-[100px] h-[40px] text-center items-center p-4">
                                     <h3 class="text-[16px] text-[#00303C] font-medium">Meta</h3>
@@ -210,7 +210,7 @@
                             </div>
                         </div>
                         <!--Task box 5  -->
-                        <div class="bg-[#F4F7FF] rounded-xl shadow-md">
+                        <div class="bg-[#F4F7FF] rounded-xl shadow-lg">
                             <div class="p-6">
                                 <div class="bg-[#FFF] rounded-md flex justify-center  w-[130px] h-[40px] text-center items-center p-4">
                                     <h3 class="text-[16px] text-[#00303C] font-medium">Google LLC</h3>
@@ -240,7 +240,7 @@
                             </div>
                         </div>
                         <!--Task box 6  -->
-                        <div class="bg-[#F4F7FF] rounded-xl shadow-md">
+                        <div class="bg-[#F4F7FF] rounded-xl shadow-lg">
                             <div class="p-6">
                                 <div class="bg-[#FFF] rounded-md flex justify-center  w-[120px] h-[40px] text-center items-center p-4">
                                     <h3 class="text-[16px] text-[#00303C] font-medium">Glassdoar</h3>
