--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                 <div class="flex items-center w-fit">
                     <div class="flex bg-[#F4F7FF] rounded-full p-3 items-center">
                         <img class="w-[32px] h-[32px]" src="assets/checkbox.png" alt="">
-                        <h1 class="text-3xl text-[#00303C] font-bold pl-4">00</h1>
+                        <h1 class="text-3xl text-[#00303C] font-bold pl-4">23</h1>
                     </div>
-                    <div class="bg-[#F4F7FF] ml-18 rounded-full p-3 ">
+                    <div id="bg-btn" class="bg-[#F4F7FF] ml-18 rounded-full p-3 ">
                         <img class="cursor-pointer " src="assets/theme-btn.png " alt="">
 
                     </div>
@@ -63,7 +63,7 @@
                             </div>
                             <div class="pl-2">
                                 <p class="text-sm text-[#00303C] font-semibold">Task Assigned</p>
-                                <h2 class="font-bold text-[#00303C] text-3xl">05</h2>
+                                <h2 class="font-bold text-[#00303C] text-3xl">06</h2>
                             </div>
                         </div>
                         <div id="discover-box"
@@ -312,6 +312,7 @@
     </section>
 
     <script src="script/devBoard.js"></script>
+    <script src="script/blogs.js"></script>
 </body>
 
 </html>
