--- a/index.html
+++ b/index.html
@@ -94,11 +94,10 @@
                                 <div class="bg-[#FFF] rounded-md flex justify-center  w-[120px] h-[40px] text-center items-center ">
                                     <h3 class="text-[16px] text-[#00303C] font-medium">ShopEase</h3>
                                 </div>
-                                <h1 class="text-[24px] text-[#00303C] font-semibold my-6">Fix Mobile Button Issue </h1>
+                                <h1 class="text-[24px] text-[#00303C] font-semibold my-6 title">Fix Mobile Button Issue </h1>
 
-                                <div class="bg-[#FFF] p-4 rounded-lg">
-                                    <p class="overflow-hidden text-ellipsis font-light text-[#000]">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick
-                                        works properly.</p>
+                                <div class="bg-[#FFF] p-4 rounded-lg text-ellipsis overflow-hidden">
+                                    <p class=" font-light text-[#000]">Investigate and resolve an issue where a button is not functioning correctly on mobile devices, ensuring proper responsiveness and interactivity.</p>
 
                                 </div>
 
@@ -112,7 +111,7 @@
                                     </div>
 
                                     <div>
-                                        <button onclick="multiFunction(event)" id="box1-btn" class="btn bg-[#3752FD] text-[#FFF] text-[16px] rounded-lg">Completed</button>
+                                        <button id="box1-btn" class="box-btn btn bg-[#3752FD] text-[#FFF] text-[16px] rounded-lg">Completed</button>
                                     </div>
 
                                 </div>
@@ -125,10 +124,10 @@
                                 <div class="bg-[#FFF] rounded-md flex justify-center  w-[120px] h-[40px] text-center items-center p-4">
                                     <h3 class="text-[16px] text-[#00303C] font-medium">CloudSync</h3>
                                 </div>
-                                <h1 class="text-[24px] text-[#00303C] font-semibold my-6">Add Dark Mode</h1>
+                                <h1 class="text-[24px] text-[#00303C] font-semibold my-6 title ">Add Dark Mode</h1>
 
-                                <div class="bg-[#FFF] p-4 rounded-lg">
-                                    <p class="overflow-hidden text-ellipsis font-light text-[#000]">Store the user's preference in localStorage, update CSS variables dynamically, and apply a smooth transition effect.</p>
+                                <div class="bg-[#FFF] p-4 rounded-lg text-ellipsis overflow-hidden">
+                                    <p class=" font-light text-[#000]">Implement a dark mode feature with a toggle option, ensuring proper styling and theme consistency across the application.</p>
 
                                 </div>
 
@@ -142,7 +141,7 @@
                                     </div>
 
                                     <div>
-                                        <button onclick="multiFunction(event)" id="box2-btn"class="btn bg-[#3752FD] text-[#FFF] text-[16px] rounded-lg">Completed</button>
+                                        <button id="box2-btn"class="box-btn btn bg-[#3752FD] text-[#FFF] text-[16px] rounded-lg">Completed</button>
                                     </div>
 
                                 </div>
@@ -155,10 +154,10 @@
                                 <div class="bg-[#FFF] rounded-md flex justify-center  w-[120px] h-[40px] text-center items-center p-4">
                                     <h3 class="text-[16px] text-[#00303C] font-medium">SwiftPay</h3>
                                 </div>
-                                <h1 class="text-[24px] text-[#00303C] font-semibold my-6">Optimize Home page </h1>
+                                <h1 class="text-[24px] text-[#00303C] font-semibold my-6 title ">Optimize Home page </h1>
 
-                                <div class="bg-[#FFF] p-4 rounded-lg">
-                                    <p class="overflow-hidden text-ellipsis font-light text-[#000]">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly.</p>
+                                <div class="bg-[#FFF] p-4 rounded-lg text-ellipsis overflow-hidden pb-10">
+                                    <p class=" font-light text-[#000]">Improve the homepage performance, layout, and loading speed for better user experience and SEO optimization.</p>
 
                                 </div>
 
@@ -172,7 +171,7 @@
                                     </div>
 
                                     <div>
-                                        <button onclick="multiFunction(event)" id="box3-btn" class="btn bg-[#3752FD] text-[#FFF] text-[16px] rounded-lg">Completed</button>
+                                        <button id="box3-btn" class= "box-btn btn bg-[#3752FD] text-[#FFF] text-[16px] rounded-lg">Completed</button>
                                     </div>
 
                                 </div>
@@ -185,10 +184,10 @@
                                 <div class="bg-[#FFF] rounded-md flex justify-center  w-[100px] h-[40px] text-center items-center p-4">
                                     <h3 class="text-[16px] text-[#00303C] font-medium">Meta</h3>
                                 </div>
-                                <h1 class="text-[24px] text-[#00303C] font-semibold my-6">Add new emoji 🤲</h1>
+                                <h1 class="text-[24px] text-[#00303C] font-semibold my-6 title ">Add new emoji 🤲</h1>
 
-                                <div class="bg-[#FFF] p-4 rounded-lg">
-                                    <p class="overflow-hidden text-ellipsis font-light text-[#000]">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly.</p>
+                                <div class="bg-[#FFF] p-4 rounded-lg text-ellipsis overflow-hidden pb-10">
+                                    <p class=" font-light text-[#000]">Integrate new emojis into the system, ensuring proper rendering and compatibility across devices and platforms.</p>
 
                                 </div>
 
@@ -202,7 +201,7 @@
                                     </div>
 
                                     <div>
-                                        <button onclick="multiFunction(event)" id="box4-btn"class="btn bg-[#3752FD] text-[#FFF] text-[16px] rounded-lg">Completed</button>
+                                        <button id="box4-btn"class="box-btn btn bg-[#3752FD] text-[#FFF] text-[16px] rounded-lg">Completed</button>
                                     </div>
 
                                 </div>
@@ -215,10 +214,10 @@
                                 <div class="bg-[#FFF] rounded-md flex justify-center  w-[130px] h-[40px] text-center items-center p-4">
                                     <h3 class="text-[16px] text-[#00303C] font-medium">Google LLC</h3>
                                 </div>
-                                <h1 class="text-[24px] text-[#00303C] font-semibold my-6">Integrate OpenAI API </h1>
+                                <h1 class="text-[24px] text-[#00303C] font-semibold my-6 title ">Integrate OpenAI API </h1>
 
-                                <div class="bg-[#FFF] p-4 rounded-lg">
-                                    <p class="overflow-hidden text-ellipsis font-light text-[#000]">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly.</p>
+                                <div class="bg-[#FFF] p-4 rounded-lg text-ellipsis overflow-hidden">
+                                    <p class=" font-light text-[#000]">Integrate the OpenAI API to enable AI-powered features, ensuring seamless communication and functionality within the application.</p>
 
                                 </div>
 
@@ -232,7 +231,7 @@
                                     </div>
 
                                     <div>
-                                        <button onclick="multiFunction(event)" id="box5-btn"class="btn bg-[#3752FD] text-[#FFF] text-[16px] rounded-lg">Completed</button>
+                                        <button id="box5-btn"class="box-btn btn bg-[#3752FD] text-[#FFF] text-[16px] rounded-lg">Completed</button>
                                     </div>
 
                                 </div>
@@ -245,10 +244,10 @@
                                 <div class="bg-[#FFF] rounded-md flex justify-center  w-[120px] h-[40px] text-center items-center p-4">
                                     <h3 class="text-[16px] text-[#00303C] font-medium">Glassdoar</h3>
                                 </div>
-                                <h1 class="text-[24px] text-[#00303C] font-semibold my-6 relative">Improve Job searching</h1>
+                                <h1 class="text-[24px] text-[#00303C] font-semibold my-6 title  relative">Improve Job searching</h1>
 
-                                <div class="bg-[#FFF] p-4 rounded-lg">
-                                    <p class="overflow-hidden text-ellipsis font-light text-[#000]">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly.</p>
+                                <div class="bg-[#FFF] p-4 rounded-lg text-ellipsis overflow-hidden pb-10">
+                                    <p class="font-light text-[#000]">Enhance the job search functionality by improving filters, relevance, and user experience for better job matching.</p>
 
                                 </div>
 
@@ -262,7 +261,7 @@
                                     </div>
 
                                     <div>
-                                        <button onclick="multiFunction(event)" id="box6-btn"class="btn bg-[#3752FD] text-[#FFF] text-[16px] rounded-lg" >Completed</button>
+                                        <button id="box6-btn"class="box-btn btn bg-[#3752FD] text-[#FFF] text-[16px] rounded-lg" >Completed</button>
                                     </div>
 
                                 </div>
@@ -276,7 +275,7 @@
 
 
                   <!-- activity container  -->
-                <aside class="w-3/12 bg-[#FFFFFF] ml-4 rounded-xl shadow-md" id="activity-container">
+                <aside class="w-3/12 bg-[#FFFFFF] ml-4 rounded-xl shadow-md">
                     <div class="flex-row justify-center text-center space-y-4">
                         <div class="mt-6 flex justify-center items-center">
                             <img class="mr-4" src="assets/activity.png" alt="">
@@ -285,13 +284,13 @@
 
                         </div>
                         <div>
-                            <button class="btn p-5 text-[16px] bg-[#3752FD] text-[#FFF] rounded-lg">Clear History</button>
+                            <button id="clear-btn" class="btn p-5 text-[16px] bg-[#3752FD] text-[#FFF] rounded-lg">Clear History</button>
                         </div>
 
                         <div class=" border-[#3752FD33] border-b-3 border-dashed">
 
                         </div>
-                        <div id="msg-container" class="text-start p-6 flex flex-row">
+                        <div id="activity-container" class="text-start p-6 ">
 
                             
                             
